--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@ title: 首页
       <ul>
     {%- endif %}
         <li>
-          <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
           <div class="title">
             <a href="{{ site.baseurl | append: post.url }}" class="hover-underline">{{ post.title }}</a>
-          </div>
-          <div class="categories">
             {% for categorie in post.categories -%}
-            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline">{{ categorie }}</a>
+            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline">[{{ categorie }}]</a>
             {%- endfor %}
           </div>
+          <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
         </li>
     {%- if forloop.last or post_previous_year != post_year %}
       </ul>
