--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@ title: 首页
         <li>
           <div class="title">
             <a href="{{ site.baseurl | append: post.url }}" class="hover-underline">{{ post.title }}</a>
-            {% for categorie in post.categories -%}
-            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline">[{{ categorie }}]</a>
-            {%- endfor %}
+            <div class="categories">
+              {% for categorie in post.categories -%}
+              <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline">[{{ categorie }}]</a>
+              {%- endfor %}
+            </div>
           </div>
           <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
         </li>
