--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@ title: 首页
         <li>
           <div class="title">
             <a href="{{ site.baseurl | append: post.url }}" class="hover-underline">{{ post.title }}</a>
-            <div class="categories">
-              {% for categorie in post.categories -%}
-              <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline">[{{ categorie }}]</a>
-              {%- endfor %}
-            </div>
+            {% for categorie in post.categories -%}
+            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline" style="padding: 3px 0; font-size: 12px; color: #666666; margin-left: 8px;">[{{ categorie }}]</a>
+            {%- endfor %}
           </div>
           <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
         </li>
