--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: 首页
           <div class="title">
             <a href="{{ site.baseurl | append: post.url }}" class="hover-underline">{{ post.title }}</a>
             {% for categorie in post.categories -%}
-            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline" style="padding: 3px 0; font-size: 12px; color: #666666; margin-left: 8px;">[{{ categorie }}]</a>
+            <a href="{{site.baseurl}}/pages/categories.html#{{ categorie }}" class="hover-underline" style="font-size: 9px; color: #666666; margin-left: 4px;">[{{ categorie }}]</a>
             {%- endfor %}
           </div>
           <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
