--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@ layout: page
 title: 首页
 ---
 <div class="page page-index">
+  <div class="list-category">
+    <h2>所有分类</h2>
+    <div>
+      {%- for category in site.categories %}
+      <a href="{{site.baseurl}}/pages/categories.html#{{ categorie[0] }}">{{ category[0] }}</a>
+      {%- endfor %}
+    </div>
+  </div>
   {% for post in site.posts  -%}
     {%- capture post_year %}{{ post.date | date: "%Y" }}{% endcapture -%}
     {%- capture post_previous_year %}{{ post.previous.date | date: "%Y" }}{% endcapture -%}
