--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: 首页
     <h2>所有分类</h2>
     <div>
       {%- for category in site.categories %}
-      <a href="{{site.baseurl}}/pages/categories.html#{{ categorie[0] }}">{{ category[0] }}</a>
+      <a href="{{site.baseurl}}/pages/categories.html#{{ category[0] }}">{{ category[0] }}</a>
       {%- endfor %}
     </div>
   </div>
