--- a/pages/kamenrider.html
+++ b/pages/kamenrider.html
@@ -1,3 +1,8 @@
+---
+layout: page
+title: 假面骑士
+---
+
 <link rel="stylesheet" href="{{site.baseurl}}/static/css/kr.css?t={{buildAt}}" type="text/css" media="all" />
 <div class="p-collection">
 	<div class="p-group-header">
