--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: page
 title: 首页
 ---
 <div class="page page-index">
+  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/a7Y4samP2dc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <div class="list-category">
     <h2>所有分类</h2>
     <div>
